--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+*{
+  background-image: conic-gradient(rgb(39, 35, 35), rgb(136, 136, 130), rgb(181, 192, 181), rgb(53, 53, 109), black);
+  color: white;
+}
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
